k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      # This is the container that will be deployed
      containers:
        - name: worker
          # This is the image that will be used
          image: stephengrider/multi-worker
          # This is the port that the container will be listening on
