k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - gptai.cz
        - www.gptai.cz
      secretName: gptai-cz
  rules:
    - host: gptai.cz
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            # This is the service that will be used
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
          # - path: /api/values/?(.*)
          #   pathType: Prefix
          #   # This is the service that will be used
            # backend:
            #   service:
            #     name: worker-cluster-ip-service
            #     port:
            #       number: 5000
    - host: www.gptai.cz
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            # This is the service that will be used
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
          # - path: /api/values/?(.*)
          #   pathType: Prefix
          #   # This is the service that will be used
            # backend:
            #   service:
            #     name: worker-cluster-ip-service
            #     port:
            #       number: 5000
